# src/Generated/Exception/GetOpenApiInFormatInternalServerErrorException.php
@@ -1,17 +1,0 @@
-<?php
-
-namespace Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Exception;
-
-class GetOpenApiInFormatInternalServerErrorException extends InternalServerErrorException
-{
-    private $errorResponse;
-    public function __construct(\Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Model\ErrorResponse $errorResponse)
-    {
-        parent::__construct('Server error', 500);
-        $this->errorResponse = $errorResponse;
-    }
-    public function getErrorResponse()
-    {
-        return $this->errorResponse;
-    }
-}
