# src/Generated/Exception/PostAuthRoleIdentityCollectionNotFoundException.php
@@ -1,17 +1,0 @@
-<?php
-
-namespace Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Exception;
-
-class PostAuthRoleIdentityCollectionNotFoundException extends NotFoundException
-{
-    private $errorResponse;
-    public function __construct(\Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Model\ErrorResponse $errorResponse)
-    {
-        parent::__construct('Not Found', 404);
-        $this->errorResponse = $errorResponse;
-    }
-    public function getErrorResponse()
-    {
-        return $this->errorResponse;
-    }
-}
